# web2api-mcp-agent

./: README.md  ngrok.yml  pyproject.toml  run_mcp.py  test_hn_local.py  web_app.py
mcp_server/: cli.py  mcp_server.py  server.py  stdio_server.py  tools.py
mcp_server/adapters/: hackernews.py  producthunt.py  reddit.py
mcp_server/utils/: http_client.py  parser.py
scripts/: run_web2api_mcp.sh
tests/: test_hn_adapter.py
web2api_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
